model jointly discribed eralier

--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -59,7 +59,7 @@ Detecting admixture, i.e. gene flow between previously isolated populations can 
 
 
 ##Admixture on the genomic level and basic idea how to date it
-On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003] (Figure \ref{fig:Into_fig} A). Under a constant recombination rate, the length of introgressed segments should be inversely proportional to time since the admixture event. Assuming the recombination events occurring according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferred the time since the admixture event, also known as the recombination clock [@pool_inference_2009; @gravel_population_2012]. 
+On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003] (Figure \ref{fig:Into_fig} A). Under a constant recombination rate, the length of introgressed segments should be inversely proportional to time since the admixture event. Assuming the recombination events occurring according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferred the time since the admixture event, also known as the recombination clock [@pool_inference_2009; @gravel_population_2012]. To do this, the model to estimate the time of the admixture event usually assumes an one generation long admixture event followed by a period of isolation [@liang_lengths_2014]. The proportion of admixture of individuals in the admixed population is assumed to be identical, tracts are rare and inbreeding is not significant, such that admixture segments do not recombin with echother to form longer segments [@pool_inference_2009].  The effect of drift is assumed to be negligible [@loh_inferring_2013], the introgressed segments act neutral [@shchur_distribution_2019] and the recombination rate does not change over time [@gravel_population_2012].
 <!-- Introduce model assumptions here -->
 <!-- constant recombination rate -->
 <!-- same ancestor -->
@@ -72,16 +72,16 @@ As recombination breaks the introgressed chromosomal segments apart each generat
 
 
 ##The two approaches of obtaining the length of introgressed segments: searching for introgressd haplotypes
-The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methods are available focusing on different characteristics, such as LD patterns and density of derived variants, of introgressed haplotypes to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly inferred introgressed haplotypes can be used for dating.
+The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methods are available focusing on different characteristics introgressed haplotypes, such as LD patterns and density of derived variants, to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly inferred introgressed haplotypes can be used for dating.
 
 ##Dates of archaic introgression obtained so far
 The two approach were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using a ancient Genome[@fu_genome_2014]. An additional contemporaneous  admixture event between Neandertals and East Asian population was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP [@sankararaman_combined_2016]. Using Papuan individuals revealed two time separated admixture events one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019].
 
 ##Assumptions on the data
-Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER program [@loh_inferring_2013], typically require fairly strong assumptions [@pool_inference_2009; @gravel_population_2012; @liang_lengths_2014].
+Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER program [@loh_inferring_2013], typically require some fairly strong assumptions [@pool_inference_2009; @gravel_population_2012; @liang_lengths_2014], which might bias the estiamtes when violated.
 
 ### Segments are is independent and identically exponentially distributed
-First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very  recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture[@liang_lengths_2014].
+First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. This is not true for Neandertal admixture in non-African population [@vernot_complex_2015]. Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very  recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture[@liang_lengths_2014].
 <!-- Disentengel model and data assumptions -->
 <!-- Pool and Nielsen assumption: no significant inbreeding tracts are rare (no recombination with eachother) -->
 <!-- Gravel 2012: tracts from multiple migrant ancestors -->
@@ -114,7 +114,7 @@ If admixture is happening over $n$ generations this results in a mixture of $n$ 
 Here we aim to evaluate admixture time estimates, whereby we focus on a well studied example of archaic admixture into modern humans. Those admixture events are assumed to be long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We are particularly interested in scenarios of long continuous gene flow between archaic and human populations and its signals in the ALD distribution. We introduce a model for continuous admixture, where the migration rate over time is gamma distributed with two parameter, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous Gama distributed admixture being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
 
 
-``````{r Into_fig,message=FALSE, echo=FALSE,warning=FALSE,fig.align="center",out.width="85%",fig.pos="H",fig.cap="\\label{fig:Into_fig} A) Direct and ALD approach B) Demographic scanarios"}
+``````{r Into_fig,message=FALSE, echo=FALSE,warning=FALSE,fig.align="center",out.width="95%",fig.pos="H",fig.cap="\\label{fig:Into_fig} A) Direct and ALD approach B) Demographic scanarios"}
 library(png)
 #Intro_Fig <- readPNG('Paper_Graphics.png',native = T,info = T)
 include_graphics(path = 'Paper_Graphics.png',auto_pdf = T)
