--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -1384,6 +1384,22 @@ Ancestral Neandertal sequences within extant humans reveal that positive and pur
 	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/I76MGWIV/Racimo et al. - 2017 - Signatures of Archaic Adaptive Introgression in Pr.pdf:application/pdf}
 }
 
+
+@article{shchur_distribution_2019,
+	title = {On the distribution of tract lengths during adaptive introgression},
+	rights = {© 2019, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-{NonCommercial}-{NoDerivs} 4.0 International), {CC} {BY}-{NC}-{ND} 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	url = {https://www.biorxiv.org/content/10.1101/724815v1},
+	doi = {10.1101/724815},
+	abstract = {{\textless}h3{\textgreater}{ABSTRACT}{\textless}/h3{\textgreater} {\textless}p{\textgreater}Admixture is increasingly being recognized as an important factor in evolutionary genetics. The distribution of genomic admixture tracts, and the resulting effects on admixture linkage disequilibrium, can be used to date the timing of admixture between species or populations. However, the theory used for such prediction assumes selective neutrality despite the fact that many famous examples of admixture involve natural selection acting for or against admixture. In this paper, we investigate the effects of positive selection on the distribution of tract lengths. We develop a theoretical framework that relies on approximating the trajectory of the selected allele using a logistic function. By numerically calculating the expected allele trajectory, we also show that the approach can be extended to cases where the logistic approximation is poor due to the effects of genetic drift. Using simulations, we show that the model is highly accurate under most scenarios. We use the model to show that positive selection on average will tend to increase the admixture tract length. However, perhaps counter-intuitively, conditional on the allele frequency at the time of sampling, positive selection will actually produce shorter expected tract lengths. We discuss the consequences of our results in interpreting the timing of the introgression of {EPAS}1 from Denisovans into the ancestors of Tibetans.{\textless}/p{\textgreater}},
+	pages = {724815},
+	journaltitle = {{bioRxiv}},
+	author = {Shchur, Vladimir and Svedberg, Jesper and Medina, Paloma and Corbett-Detig, Russ and Nielsen, Rasmus},
+	urldate = {2020-01-31},
+	date = {2019-08-05},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/T6R5VWIR/Shchur et al. - 2019 - On the distribution of tract lengths during adapti.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/AFNYVM8U/724815v1.html:text/html}
+}
+
 @article{seguin_orlando_paleogenomics_2014,
 	title = {Paleogenomics. {Genomic} structure in {Europeans} dating back at least 36,200 years},
 	volume = {346},
