speciation rev included

--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -35,6 +35,51 @@
 	pages = {43}
 }
 
+
+@article{abbott_hybridization_2013,
+	title = {Hybridization and speciation},
+	volume = {26},
+	rights = {© 2013 The Authors. Journal of Evolutionary Biology © 2013 European Society For Evolutionary Biology},
+	issn = {1420-9101},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1420-9101.2012.02599.x},
+	doi = {10.1111/j.1420-9101.2012.02599.x},
+	abstract = {Hybridization has many and varied impacts on the process of speciation. Hybridization may slow or reverse differentiation by allowing gene flow and recombination. It may accelerate speciation via adaptive introgression or cause near-instantaneous speciation by allopolyploidization. It may have multiple effects at different stages and in different spatial contexts within a single speciation event. We offer a perspective on the context and evolutionary significance of hybridization during speciation, highlighting issues of current interest and debate. In secondary contact zones, it is uncertain if barriers to gene flow will be strengthened or broken down due to recombination and gene flow. Theory and empirical evidence suggest the latter is more likely, except within and around strongly selected genomic regions. Hybridization may contribute to speciation through the formation of new hybrid taxa, whereas introgression of a few loci may promote adaptive divergence and so facilitate speciation. Gene regulatory networks, epigenetic effects and the evolution of selfish genetic material in the genome suggest that the Dobzhansky–Muller model of hybrid incompatibilities requires a broader interpretation. Finally, although the incidence of reinforcement remains uncertain, this and other interactions in areas of sympatry may have knock-on effects on speciation both within and outside regions of hybridization.},
+	pages = {229--246},
+	number = {2},
+	journaltitle = {Journal of Evolutionary Biology},
+	author = {Abbott, R. and Albach, D. and Ansell, S. and Arntzen, J. W. and Baird, S. J. E. and Bierne, N. and Boughman, J. and Brelsford, A. and Buerkle, C. A. and Buggs, R. and Butlin, R. K. and Dieckmann, U. and Eroukhmanoff, F. and Grill, A. and Cahan, S. H. and Hermansen, J. S. and Hewitt, G. and Hudson, A. G. and Jiggins, C. and Jones, J. and Keller, B. and Marczewski, T. and Mallet, J. and Martinez‐Rodriguez, P. and Möst, M. and Mullen, S. and Nichols, R. and Nolte, A. W. and Parisod, C. and Pfennig, K. and Rice, A. M. and Ritchie, M. G. and Seifert, B. and Smadja, C. M. and Stelkens, R. and Szymura, J. M. and Väinölä, R. and Wolf, J. B. W. and Zinner, D.},
+	urldate = {2020-02-06},
+	date = {2013},
+	langid = {english},
+	keywords = {hybrid species, hybrid zone, incompatibility, introgression, reinforcement, reproductive barrier},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/CJRRSH2G/Abbott et al. - 2013 - Hybridization and speciation.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/C9SZLKH2/j.1420-9101.2012.02599.html:text/html}
+}
+
+
+@article{manuel_chimpanzee_2016,
+	title = {Chimpanzee genomic diversity reveals ancient admixture with bonobos},
+	volume = {354},
+	rights = {Copyright © 2016, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/354/6311/477},
+	doi = {10.1126/science.aag2602},
+	abstract = {Of chimpanzees and bonobos
+Modern non-African human genomes contain genomic remnants that suggest that there was interbreeding between ancient humans and archaic hominoid lineages. Now, de Manuel et al. show similar ancestral interbreeding between the ancestors of today's chimpanzees and bonobos (see the Perspective by Hoelzel). The study also provides population-specific genetic markers that may be valuable for conservation efforts.
+Science, this issue p. 477; see also p. 414
+Our closest living relatives, chimpanzees and bonobos, have a complex demographic history. We analyzed the high-coverage whole genomes of 75 wild-born chimpanzees and bonobos from 10 countries in Africa. We found that chimpanzee population substructure makes genetic information a good predictor of geographic origin at country and regional scales. Multiple lines of evidence suggest that gene flow occurred from bonobos into the ancestors of central and eastern chimpanzees between 200,000 and 550,000 years ago, probably with subsequent spread into Nigeria-Cameroon chimpanzees. Together with another, possibly more recent contact (after 200,000 years ago), bonobos contributed less than 1\% to the central chimpanzee genomes. Admixture thus appears to have been widespread during hominid evolution.
+Genome sequences reveal ancient interbreeding between chimpanzees and bonobos.
+Genome sequences reveal ancient interbreeding between chimpanzees and bonobos.},
+	pages = {477--481},
+	number = {6311},
+	journaltitle = {Science},
+	author = {Manuel, Marc de and Kuhlwilm, Martin and Frandsen, Peter and Sousa, Vitor C. and Desai, Tariq and Prado-Martinez, Javier and Hernandez-Rodriguez, Jessica and Dupanloup, Isabelle and Lao, Oscar and Hallast, Pille and Schmidt, Joshua M. and Heredia-Genestar, José María and Benazzo, Andrea and Barbujani, Guido and Peter, Benjamin M. and Kuderna, Lukas F. K. and Casals, Ferran and Angedakin, Samuel and Arandjelovic, Mimi and Boesch, Christophe and Kühl, Hjalmar and Vigilant, Linda and Langergraber, Kevin and Novembre, John and Gut, Marta and Gut, Ivo and Navarro, Arcadi and Carlsen, Frands and Andrés, Aida M. and Siegismund, Hans R. and Scally, Aylwyn and Excoffier, Laurent and Tyler-Smith, Chris and Castellano, Sergi and Xue, Yali and Hvilsom, Christina and Marques-Bonet, Tomas},
+	urldate = {2020-02-06},
+	date = {2016-10-28},
+	langid = {english},
+	pmid = {27789843},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/B8E9JLI5/Manuel et al. - 2016 - Chimpanzee genomic diversity reveals ancient admix.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/FZY677VW/477.html:text/html}
+}
+
 @article{prufer_high-coverage_2017,
 	title = {A high-coverage {Neandertal} genome from {Vindija} {Cave} in {Croatia}},
 	volume = {358},
